k8s-homelab/hello-world/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: vr.myapp.com
      http:
        paths:
          - path: /helloWorld
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
